efk-helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: dev.image-annotation.com
      http:
        paths:
          - path: /kibana
            pathType: Prefix
            backend:
              service:
                name: kibana-kibana
                port:
                  number: 30000
